Another paragraph was added.

--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,8 @@ This is a test of Git using a HTML example.
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id fringilla nisl, a vulputate magna. Suspendisse potenti. Donec lectus neque, consectetur et metus at, convallis molestie orci. Morbi sagittis elementum odio. Suspendisse bibendum urna neque, ac facilisis tortor scelerisque vel. Morbi vestibulum sem efficitur ex consectetur tristique. Vestibulum sed bibendum odio, in posuere mi. Nam imperdiet orci sed nunc vehicula congue sit amet ut nisi. Suspendisse rutrum aliquam nulla. Aliquam tristique erat at condimentum vulputate. Nullam convallis aliquam suscipit. Nunc bibendum, nibh non feugiat tempor, ipsum ipsum commodo sapien, euismod lacinia massa metus at massa. Nulla tincidunt, augue ac malesuada sollicitudin, velit augue consectetur sapien, vel accumsan massa est sed libero. Aenean eu tellus velit.
 </p>
+<p>
+<b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id fringilla nisl, a vulputate magna. Suspendisse potenti. Donec lectus neque, consectetur et metus at, convallis molestie orci. Morbi sagittis elementum odio. Suspendisse bibendum urna neque, ac facilisis tortor scelerisque vel. Morbi vestibulum sem efficitur ex consectetur tristique. Vestibulum sed bibendum odio, in posuere mi. Nam imperdiet orci sed nunc vehicula congue sit amet ut nisi. Suspendisse rutrum aliquam nulla. Aliquam tristique erat at condimentum vulputate. Nullam convallis aliquam suscipit. Nunc bibendum, nibh non feugiat tempor, ipsum ipsum commodo sapien, euismod lacinia massa metus at massa. Nulla tincidunt, augue ac malesuada sollicitudin, velit augue consectetur sapien, vel accumsan massa est sed libero. Aenean eu tellus velit.</b>
+</p>
 </body>
 </html>
